# crosstalk-uoft-NM9AMCP

./: .gitignore  README.md  just_test_model.py  pyproject.toml  train_model.py
data/: README.md
models/: README.md
src/: __init__.py  dataset.py  eval.py  path_and_constants.py
