[project]
name = "crosstalk-competition"
version = "0.1.0"
description = "Add your description here"
requires-python = "==3.12.*"
dependencies = [
    "autogluon>=1.5.0",
    "gdown>=6.1.0",
    "kaggle>=2.2.2",
    "modal>=1.5.0",
    "more-itertools>=11.1.0",
    "numpy>=2.1.3",
    "pandas>=2.3.3",
    "pyarrow>=20.0.0",
    "pycrdt>=0.13.1",
    "pympler>=1.1",
    "rdkit>=2026.3.3",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.3",
    "seaborn>=0.13.2",
    "tabpfn>=8.0.8",
    "torch>=2.9.1",
    "torchaudio>=2.11.0",
    "torchvision>=0.24.1",
    "tqdm>=4.68.3",
    "umap-learn>=0.5.12",
]

# Use CUDA 13.0 PyTorch wheels (GPU build) instead of the default CPU build.
[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cu130" }]
torchvision = [{ index = "pytorch-cu130" }]
torchaudio = [{ index = "pytorch-cu130" }]
